azure/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: megatron
  namespace: megatron
spec:
  ports:
  - port: 5000
  selector:
    app: megatron
